@@ -1,8 +1,8 @@
 Package: smallCAGEqc
 Type: Package
 Title: ad-hoc QC functions for shallow-sequenced test CAGE libraries
-Version: 0.12.2.99999
-Date: 2016-08-25
+Version: 0.12.2.999999
+Date: 2017-01-25
 Author: Charles Plessy <plessy@riken.jp>
 Maintainer: Charles Plessy <plessy@riken.jp>
 Description: Functions to quickly generate reports about CAGE libraries.
@@ -35,5 +35,6 @@ Suggests:
     knitr,
     rmarkdown,
     SummarizedExperiment
+LazyData: true
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
