@@ -1,0 +1,20 @@
+#' 96 hexameric barcode sequences for sample indexing
+#'
+#' Sequence of the 96 barcodes used in Poulain \emph{et al.}, 2017. NanoCAGE
+#' libraries can index samples by inserting barcodes in the template-switching
+#' oligonucleotide.  A list of 96 barcodes, was published in Poulain \emph{et
+#' al.}, 2017.  The barcodes were selected to avoid palindromes, polynucleotide
+#' tracts, and sequence similarity.
+#' 
+#' @format A data frame with one column named \code{barcodes}.
+#'
+#' @author Jean-Étienne Morlighem, Charles Plessy
+#'
+#' @references Poulain S, Kato S, Arnaud O, Morlighem JÉ, Suzuki M, Plessy C,
+#'   Harbers M. NanoCAGE: A Method for the Analysis of Coding and Noncoding
+#'   5'-Capped Transcriptomes. Methods Mol Biol. 2017 1543:57-109
+#'
+#' @examples
+#' nanoCAGE2017barcodes
+
+"nanoCAGE2017barcodes"
