@@ -1,0 +1,96 @@
+nanoCAGE2017barcodes <- utils::read.table(text = "ACACAG
+ACACGT
+ACACTC
+ACAGAT
+ACAGCA
+ACAGTG
+ACATAC
+ACATCT
+ACATGA
+AGTACG
+AGTAGC
+AGTATA
+AGTCAG
+AGTCGT
+AGTCTC
+AGTGAT
+AGTGCA
+AGTGTG
+ATCACG
+ATCAGC
+ATCATA
+ATCGAT
+ATCGCA
+ATCGTG
+ATCTAC
+ATCTCT
+ATCTGA
+CACACG
+CACAGC
+CACATA
+CACGAT
+CACGCA
+CACGTG
+CACTAC
+CACTCT
+CACTGA
+CGACAG
+CGACGT
+CGACTC
+CGAGAT
+CGAGCA
+CGAGTG
+CGATAC
+CGATCT
+CGATGA
+CTGACG
+CTGAGC
+CTGATA
+CTGCAG
+CTGCGT
+CTGCTC
+CTGTAC
+CTGTCT
+CTGTGA
+GAGACG
+GAGAGC
+GAGATA
+GAGCAG
+GAGCGT
+GAGCTC
+GAGTAC
+GAGTCT
+GAGTGA
+GCTACG
+GCTAGC
+GCTATA
+GCTCAG
+GCTCGT
+GCTCTC
+GCTGAT
+GCTGCA
+GCTGTG
+GTACAG
+GTACGT
+GTACTC
+GTAGAT
+GTAGCA
+GTAGTG
+GTATAC
+GTATCT
+GTATGA
+TATACG
+TATAGC
+TATATA
+TATCAG
+TATCGT
+TATCTC
+TATGAT
+TATGCA
+TATGTG
+TCGACG
+TCGAGC
+TCGATA
+TCGCAG
+TCGCGT
+TCGCTC", stringsAsFactors = FALSE, col.names="barcodes")
